env/code_53ebd2d44ae1c/stderr.txt
  File "main.py", line 3
    if x % 3 ==0 orx % 5 == 0:
                   ^
SyntaxError: invalid syntax
